Closed
Bug 1893673
Opened 1 year ago
Closed 1 year ago
Text on reddit unselects itself when scrolling
Categories
(Core :: DOM: Selection, defect, P2)
Core
DOM: Selection
Tracking
()
VERIFIED
FIXED
128 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox125 | --- | unaffected |
| firefox126 | --- | disabled |
| firefox127 | --- | disabled |
| firefox128 | --- | verified |
People
(Reporter: jrmuizel, Assigned: sefeng211)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
STR:
- Load https://old.reddit.com/r/pics/comments/1cdiov7/president_biden_meets_4yearold_abigail_mor_edan/?rdt=34614
- Triple click the comment by Glass_Eye5320 to select all the text
- Scroll the page
After scrolling the comment is no longer selected.
I see this on macOS 14
| Reporter | ||
Comment 1•1 year ago
|
||
| Reporter | ||
Updated•1 year ago
|
Flags: needinfo?(sefeng)
Comment 2•1 year ago
|
||
Set release status flags based on info from the regressing bug 1867058
status-firefox125:
--- → unaffected
status-firefox126:
--- → affected
status-firefox127:
--- → affected
status-firefox-esr115:
--- → unaffected
Updated•1 year ago
|
| Assignee | ||
Comment 3•1 year ago
|
||
This behavior should be preserved and was lost in my ShadowDOM selection
work.
Updated•1 year ago
|
Assignee: nobody → sefeng
Status: NEW → ASSIGNED
Updated•1 year ago
|
Severity: -- → S3
Priority: -- → P2
Comment 5•1 year ago
|
||
Set release status flags based on info from the regressing bug 1867058
status-firefox128:
--- → affected
Pushed by sefeng@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ade2a6ffd66d
Make UpdateDescendantsByShadowIncludingOrder to skip in-selection range's common ancestor r=jjaschke,dom-core
Comment 7•1 year ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
Comment 8•1 year ago
|
||
The patch landed in nightly and beta is affected.
:sefeng, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox127towontfix.
For more information, please visit BugBot documentation.
Flags: needinfo?(sefeng)
| Assignee | ||
Comment 9•1 year ago
|
||
No need to uplift, this is a Nightly only feature
Flags: needinfo?(sefeng)
Updated•1 year ago
|
Updated•1 year ago
|
Flags: qe-verify+
Comment 10•1 year ago
|
||
I was able to reproduce the issue on Mac 12.6 using FF build 127.0a1(2024-04-26).
Verified as fixed on Win11/Mac 12.6 using FF build 128.0b8 and 129.0a1.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•