Bug 1893673 - Make UpdateDescendantsByShadowIncludingOrder to skip in-selection range's common ancestor r=jjaschke,dom-core

This behavior should be preserved and was lost in my ShadowDOM selection
work.

Differential Revision: https://phabricator.services.mozilla.com/D209143