dom/base/AbstractRange.cpp
@@ -100,12 +100,19 @@ void UpdateDescendantsByShadowIncludingOrder(const nsIContent& aNode,
   ShadowIncludingTreeIterator iter(*const_cast<nsIContent*>(&aNode));
   ++iter;  // We don't want to mark the root node
 
-  for (nsINode* node : iter) {
+  while (iter) {
+    nsINode* node = *iter;
     if (aMarkDesendants) {
       node->SetDescendantOfClosestCommonInclusiveAncestorForRangeInSelection();
     } else {
       node->ClearDescendantOfClosestCommonInclusiveAncestorForRangeInSelection();
     }
+
+    if (node->IsClosestCommonInclusiveAncestorForRangeInSelection()) {
+      iter.SkipChildren();
+      continue;
+    }
+    ++iter;
   }
 }
 
